--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Document</title>
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/style.css">
@@ -460,25 +461,15 @@
 		</div>
 	</body>
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-	  <script src="js/wow.min.js"></script>
+	<script src="js/jquery.nav.js"></script>
+	<script src="js/wow.min.js"></script>
       <script>
+      	// WOW
       	new WOW().init();
-      	$('.js-onePageNav').onePageNav({
-			currentClass: 'current',
-			changeHash: false,
-			scrollSpeed: 750,
-			scrollThreshold: 0.5,
-			filter: '',
-			easing: 'swing',
-			begin: function() {
-				//I get fired when the animation is starting
-			},
-			end: function() {
-				//I get fired when the animation is ending
-			},
-			scrollChange: function($currentListItem) {
-				//I get fired when you enter a section and I pass the list item of the section
-			}
-		});
+      	// onePageNav
+		$('.js-onePageNav').onePageNav({
+			currentClass: 'active'
+		})
+
       </script>
 </html>
