--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 		<title>Document</title>
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/style.css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+			<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130680290-1"></script>
+			<script>
+			  window.dataLayer = window.dataLayer || [];
+			  function gtag(){dataLayer.push(arguments);}
+			  gtag('js', new Date());
+
+			  gtag('config', 'UA-130680290-1');
+			</script>
 	</head>
 	<body>
 		<div class="wrapper">
@@ -13,7 +22,7 @@
 			<header class="header">
 				<div class="navbar">
 					<div class="container">
-						<a href="#!" class="brand"></a>
+						<a href="#" class="brand"></a>
 						<ul class="nav js-onePageNav" id="popup-nav">
 							<li class="nav-item">
 								<a href="#about" class="nav-link">礦井的優勢</a>
@@ -369,7 +378,7 @@
 								<div class="row wow bounceInUp">
 									<div class="col-lg-12 col-md-12">
 										電話： 0120-706-088
-										<a href="#!" class="btn">More</a>
+										
 									</div>
 								</div>
 							</div>
@@ -463,7 +472,15 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script src="js/jquery.nav.js"></script>
 	<script src="js/wow.min.js"></script>
-      <script>
+      <script>      	
+		$('.menu-toggle').on('click',function(){
+			$('.menu-toggle').toggleClass('active');
+			$('.navbar .nav').toggleClass('active');
+		})
+		$('.nav-link').on('click',function(){
+			$('.menu-toggle').removeClass('active');
+			$('.navbar .nav').removeClass('active');
+		})
       	// WOW
       	new WOW().init();
       	// onePageNav
