--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>Document</title>
+		<title>Minds_WebRedo</title>
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
@@ -14,6 +14,15 @@
 			  gtag('js', new Date());
 
 			  gtag('config', 'UA-130680290-1');
+			</script>
+			<!-- 由 Google 結構化資料標記協助工具產生的 JSON-LD 標記。 -->
+			<script type="application/ld+json">
+			{
+			  "@context" : "http://schema.org",
+			  "@type" : "LocalBusiness",
+			  "name" : "MINDS",
+			  "telephone" : "0120-706-088"
+			}
 			</script>
 	</head>
 	<body>
