--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Minds_WebRedo</title>
+		<link rel="shortcut icon" type="image/x-icon" href="images/logo.png" />
 		<link rel="stylesheet" href="css/animate.css">
 		<link rel="stylesheet" href="css/style.css">
 		<!-- Global site tag (gtag.js) - Google Analytics -->
