--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<header class="header">
 				<div class="navbar">
 					<div class="container">
-						<a href="#" class="brand"></a>
+						<a href="index.html" class="brand"></a>
 						<ul class="nav js-onePageNav" id="popup-nav">
 							<li class="nav-item">
 								<a href="#about" class="nav-link">礦井的優勢</a>
